--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: R package for loading the open data in psychology
 Version: 0.0.1
 Author: Yoshihiko Kunisato
-Maintainer: Yoshihiko Kunisato
+Maintainer: Yoshihiko Kunisato <ykunisato@gmail.com>
 Description: R package for loading the open data in psychology
 License: MIT + file LICENSE
 Encoding: UTF-8
